# ImageIntegrityController

./: CMakeLists.txt  ImageIntegrityControl.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  shell.nix
include/: integrity.hpp
libkoch/: CMakeLists.txt  README.md
libkoch/include/: koch.hpp
libkoch/src/: koch.cpp
src/: integrity.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
